--- a/app/src/main/res/layout/activity_prename.xml
+++ b/app/src/main/res/layout/activity_prename.xml
@@ -9,375 +9,13 @@
     android:background="@drawable/ic_rect_corner"
     tools:context=".PrenameActivity">
 
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
-        android:orientation="vertical">
+        android:layout_marginTop="5dp">
 
-        <!--        try doing without id-->
-        <LinearLayout
-            android:id="@+id/llNameSelected"
-            android:contentDescription="id_12"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:paddingRight="15dp"
-            android:paddingLeft="30dp"
-            android:orientation="vertical"
-            android:background="@drawable/ic_name_bg">
-
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Manoj Sah"
-                android:contentDescription="Name"
-                android:textStyle="bold"
-                android:textColor="@color/white"
-                android:fontFamily="@font/sofia_pro_bold_az"
-                android:textSize="22sp"/>
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Manoj Kirana Pasal"
-                android:contentDescription="Company"
-                android:textStyle="normal"
-                android:textColor="#CCFFFFFF"
-                android:fontFamily="@font/sofia_pro_light_az"
-                android:textSize="16sp"
-                android:letterSpacing="0.1"/>
-
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Chirauli, Bhokraha - 1"
-                android:contentDescription="Address"
-                android:textStyle="normal"
-                android:textColor="#CCFFFFFF"
-                android:fontFamily="@font/sofia_pro_light_az"
-                android:textSize="12sp"
-                android:letterSpacing="0.2"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:contentDescription="id_13"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:paddingRight="15dp"
-            android:paddingLeft="30dp"
-            android:orientation="vertical"
-            android:background="@drawable/ic_name_bg">
-
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Dammar Yadav"
-                android:contentDescription="Name"
-                android:textStyle="bold"
-                android:textColor="@color/white"
-                android:fontFamily="@font/sofia_pro_bold_az"
-                android:textSize="22sp"/>
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Bajrang Trader"
-                android:contentDescription="Company"
-                android:textStyle="normal"
-                android:textColor="#CCFFFFFF"
-                android:fontFamily="@font/sofia_pro_light_az"
-                android:textSize="16sp"
-                android:letterSpacing="0.1"/>
-
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Phool Chowlk, Bhokraha - 3"
-                android:contentDescription="Adress"
-                android:textStyle="normal"
-                android:textColor="#CCFFFFFF"
-                android:fontFamily="@font/sofia_pro_light_az"
-                android:textSize="12sp"
-                android:letterSpacing="0.2"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:contentDescription="id_14"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:paddingRight="15dp"
-            android:paddingLeft="30dp"
-            android:orientation="vertical"
-            android:background="@drawable/ic_name_bg">
-
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Manoj Sah"
-                android:contentDescription="Name"
-                android:textStyle="bold"
-                android:textColor="@color/white"
-                android:fontFamily="@font/sofia_pro_bold_az"
-                android:textSize="22sp"/>
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Manoj Kirana Pasal"
-                android:contentDescription="Company"
-                android:textStyle="normal"
-                android:textColor="#CCFFFFFF"
-                android:fontFamily="@font/sofia_pro_light_az"
-                android:textSize="16sp"
-                android:letterSpacing="0.1"/>
-
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Chirauli, Bhokraha - 1"
-                android:contentDescription="Adress"
-                android:textStyle="normal"
-                android:textColor="#CCFFFFFF"
-                android:fontFamily="@font/sofia_pro_light_az"
-                android:textSize="12sp"
-                android:letterSpacing="0.2"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:contentDescription="id_13"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:paddingRight="15dp"
-            android:paddingLeft="30dp"
-            android:orientation="vertical"
-            android:background="@drawable/ic_name_bg">
-
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Dammar Yadav"
-                android:contentDescription="Name"
-                android:textStyle="bold"
-                android:textColor="@color/white"
-                android:fontFamily="@font/sofia_pro_bold_az"
-                android:textSize="22sp"/>
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Bajrang Trader"
-                android:contentDescription="Company"
-                android:textStyle="normal"
-                android:textColor="#CCFFFFFF"
-                android:fontFamily="@font/sofia_pro_light_az"
-                android:textSize="16sp"
-                android:letterSpacing="0.1"/>
-
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Phool Chowlk, Bhokraha - 3"
-                android:contentDescription="Adress"
-                android:textStyle="normal"
-                android:textColor="#CCFFFFFF"
-                android:fontFamily="@font/sofia_pro_light_az"
-                android:textSize="12sp"
-                android:letterSpacing="0.2"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:contentDescription="id_14"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:paddingRight="15dp"
-            android:paddingLeft="30dp"
-            android:orientation="vertical"
-            android:background="@drawable/ic_name_bg">
-
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Manoj Sah"
-                android:contentDescription="Name"
-                android:textStyle="bold"
-                android:textColor="@color/white"
-                android:fontFamily="@font/sofia_pro_bold_az"
-                android:textSize="22sp"/>
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Manoj Kirana Pasal"
-                android:contentDescription="Company"
-                android:textStyle="normal"
-                android:textColor="#CCFFFFFF"
-                android:fontFamily="@font/sofia_pro_light_az"
-                android:textSize="16sp"
-                android:letterSpacing="0.1"/>
-
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Chirauli, Bhokraha - 1"
-                android:contentDescription="Adress"
-                android:textStyle="normal"
-                android:textColor="#CCFFFFFF"
-                android:fontFamily="@font/sofia_pro_light_az"
-                android:textSize="12sp"
-                android:letterSpacing="0.2"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:contentDescription="id_13"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:paddingRight="15dp"
-            android:paddingLeft="30dp"
-            android:orientation="vertical"
-            android:background="@drawable/ic_name_bg">
-
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Dammar Yadav"
-                android:contentDescription="Name"
-                android:textStyle="bold"
-                android:textColor="@color/white"
-                android:fontFamily="@font/sofia_pro_bold_az"
-                android:textSize="22sp"/>
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Bajrang Trader"
-                android:contentDescription="Company"
-                android:textStyle="normal"
-                android:textColor="#CCFFFFFF"
-                android:fontFamily="@font/sofia_pro_light_az"
-                android:textSize="16sp"
-                android:letterSpacing="0.1"/>
-
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Phool Chowlk, Bhokraha - 3"
-                android:contentDescription="Adress"
-                android:textStyle="normal"
-                android:textColor="#CCFFFFFF"
-                android:fontFamily="@font/sofia_pro_light_az"
-                android:textSize="12sp"
-                android:letterSpacing="0.2"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:contentDescription="id_14"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:paddingRight="15dp"
-            android:paddingLeft="30dp"
-            android:orientation="vertical"
-            android:background="@drawable/ic_name_bg">
-
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Manoj Sah"
-                android:contentDescription="Name"
-                android:textStyle="bold"
-                android:textColor="@color/white"
-                android:fontFamily="@font/sofia_pro_bold_az"
-                android:textSize="22sp"/>
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Manoj Kirana Pasal"
-                android:contentDescription="Company"
-                android:textStyle="normal"
-                android:textColor="#CCFFFFFF"
-                android:fontFamily="@font/sofia_pro_light_az"
-                android:textSize="16sp"
-                android:letterSpacing="0.1"/>
-
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Chirauli, Bhokraha - 1"
-                android:contentDescription="Adress"
-                android:textStyle="normal"
-                android:textColor="#CCFFFFFF"
-                android:fontFamily="@font/sofia_pro_light_az"
-                android:textSize="12sp"
-                android:letterSpacing="0.2"/>
-
-        </LinearLayout>
-
-
-
-
-    </LinearLayout>
+    </androidx.recyclerview.widget.RecyclerView>
 
 
 
