--- a/app/src/main/res/layout/fragment_reciept.xml
+++ b/app/src/main/res/layout/fragment_reciept.xml
@@ -5,11 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
-    tools:context=".ui.reciept.RecieptFragment">
+    android:background="@mipmap/ic_watermark"
+    android:scaleType="fitXY"
+    android:layout_gravity="center_horizontal"
+    tools:context=".ui.home.RecieptFragment">
 
     <LinearLayout
         android:orientation="vertical"
+        android:layout_marginTop="50dp"
         android:layout_marginHorizontal="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -40,6 +43,8 @@
         <TextView
             android:text="Reciept"
             android:textSize="18dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_gravity="center"
             android:paddingHorizontal="30dp"
             android:paddingVertical="8dp"
@@ -119,91 +124,98 @@
 
         </LinearLayout>
 
-        <TableLayout
-            android:id="@+id/tabla_cuerpo"
-            android:layout_marginTop="10dp"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="100dp"
+            android:gravity="center">
 
-            <TableRow
-                android:id="@+id/tableRow1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
 
-                <TextView
+            <TableLayout
+                android:id="@+id/tabla_cuerpo"
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
 
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/cell_shape"
-                    android:padding="10dp"
-                    android:textSize="15dp"
-                    android:text="Prima"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/cell_shape"
-                    android:padding="10dp"
-                    android:textSize="15dp"
-                    android:text="Kamakhya"/>
+                <TableRow
+                    android:id="@+id/tableRow1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/cell_shape"
-                    android:padding="10dp"
-                    android:textSize="15dp"
-                    android:text="Subhida"/>
+                    <TextView
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/cell_shape"
-                    android:padding="10dp"
-                    android:textSize="15dp"
-                    android:text="Others"/>
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/cell_shape"
+                        android:padding="10dp"
+                        android:textSize="15dp"
+                        android:text=" Prima      "/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/cell_shape"
+                        android:padding="10dp"
+                        android:textSize="15dp"
+                        android:text=" Kamakhya "/>
 
-            </TableRow>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/cell_shape"
+                        android:padding="10dp"
+                        android:textSize="15dp"
+                        android:text=" Subhida "/>
 
-            <TableRow
-                android:id="@+id/tableRow2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/cell_shape"
+                        android:padding="10dp"
+                        android:textSize="15dp"
+                        android:text=" Others "/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/cell_shape"
-                    android:padding="10dp"
-                    android:textSize="15dp"
-                    android:text="20"/>
+                </TableRow>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/cell_shape"
-                    android:padding="10dp"
-                    android:textSize="15dp"
-                    android:text="20"/>
+                <TableRow
+                    android:id="@+id/tableRow2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/cell_shape"
-                    android:padding="10dp"
-                    android:textSize="15dp"
-                    android:text="20"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/cell_shape"
+                        android:padding="10dp"
+                        android:textSize="15dp"
+                        android:text="20"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/cell_shape"
-                    android:padding="10dp"
-                    android:textSize="15dp"
-                    android:text="0"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/cell_shape"
+                        android:padding="10dp"
+                        android:textSize="15dp"
+                        android:text="20"/>
 
-            </TableRow>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/cell_shape"
+                        android:padding="10dp"
+                        android:textSize="15dp"
+                        android:text="20"/>
 
-        </TableLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/cell_shape"
+                        android:padding="10dp"
+                        android:textSize="15dp"
+                        android:text="0"/>
+
+                </TableRow>
+
+            </TableLayout>
+        </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
@@ -322,6 +334,8 @@
         <TextView
             android:text="Due"
             android:textSize="18dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
             android:layout_gravity="center"
             android:paddingHorizontal="40dp"
             android:paddingVertical="8dp"
@@ -398,7 +412,7 @@
 
 
     <RelativeLayout
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="bottom"
@@ -412,24 +426,29 @@
             android:orientation="vertical">
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_marginHorizontal="30dp"
             android:layout_marginTop="20dp"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <Button
                 android:id="@+id/btnDownload"
-                android:text="Download"
+                android:text="Download "
+                android:layout_marginRight="20dp"
                 android:drawableRight="@drawable/ic_pdf"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:backgroundTint="#2190EB"
+                android:textStyle="bold"
+                android:layout_height="60dp"/>
 
             <Button
                 android:id="@+id/btnSendmessage"
-                android:text="Send Message"
+                android:text="Send Message "
                 android:drawableRight="@drawable/ic_send_message"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:backgroundTint="#2190EB"
+                android:textStyle="bold"
+                android:layout_height="60dp"/>
 
         </LinearLayout>
 
@@ -437,6 +456,7 @@
             android:orientation="horizontal"
             android:layout_marginHorizontal="30dp"
             android:layout_marginTop="20dp"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
