--- a/app/src/main/res/layout/fragment_get_member.xml
+++ b/app/src/main/res/layout/fragment_get_member.xml
@@ -15,6 +15,6 @@
         android:layout_marginTop="50dp"
         android:background="@color/teal_200"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
 </FrameLayout>
