--- a/app/src/main/res/layout/fragment_get_reseller_profile.xml
+++ b/app/src/main/res/layout/fragment_get_reseller_profile.xml
@@ -16,6 +16,6 @@
         android:layout_marginTop="50dp"
         android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
 </FrameLayout>
