--- a/app/src/main/res/layout/fragment_successaddmember.xml
+++ b/app/src/main/res/layout/fragment_successaddmember.xml
@@ -30,7 +30,7 @@
                 android:gravity="center_horizontal"
                 android:paddingTop="25dp"
                 android:paddingBottom="30dp"
-                android:text="Successful"
+                android:text="@string/successful"
                 android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textFontWeight="900"
@@ -51,7 +51,7 @@
                     android:fontFamily="@font/sofia_pro_black_az"
                     android:paddingTop="15dp"
                     android:paddingBottom="10dp"
-                    android:text="User Name"
+                    android:text="@string/title_Username"
                     android:textColor="@color/white"
                     android:textFontWeight="300"
                     android:textSize="25sp"/>
@@ -84,7 +84,7 @@
                     android:fontFamily="@font/sofia_pro_black_az"
                     android:paddingTop="15dp"
                     android:paddingBottom="10dp"
-                    android:text="Password"
+                    android:text="@string/title_Password"
                     android:textColor="@color/white"
                     android:textFontWeight="300"
                     android:textSize="25sp"/>
