--- a/app/src/main/res/layout/activity_prename.xml
+++ b/app/src/main/res/layout/activity_prename.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10px"
+    android:orientation="vertical"
+    android:id="@+id/llNameSelected"
     android:background="@drawable/ic_rect_corner"
     tools:context=".PrenameActivity">
 
@@ -13,10 +15,9 @@
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="5dp">
-
-    </androidx.recyclerview.widget.RecyclerView>
+        android:layout_marginTop="5dp"/>
 
 
 
-</ScrollView>
+
+</LinearLayout>
