--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -98,6 +98,7 @@
                         android:orientation="vertical"
                         android:layout_weight="1">
                         <TextView
+                            android:id="@+id/title"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Manoj Sah"
@@ -108,6 +109,7 @@
                             android:fontFamily="@font/sofia_pro_bold_az"
                             android:textSize="22sp"/>
                         <TextView
+                            android:id="@+id/subtitle"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Manoj Kirana Pasal"
@@ -119,6 +121,7 @@
                             android:letterSpacing="0.1"/>
 
                         <TextView
+                            android:id="@+id/address"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Chirauli, Bhokraha - 1"
@@ -536,6 +539,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:contentDescription="Full"
                 android:gravity="center"
                 android:layout_weight="1">
                 <ImageView
@@ -561,6 +565,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:contentDescription="Half"
                 android:gravity="center"
                 android:layout_weight="1">
                 <ImageView
@@ -583,6 +588,7 @@
 
             <LinearLayout
                 android:id="@+id/llEmptySelected"
+                android:contentDescription="Empty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -764,7 +770,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -806,7 +812,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -855,7 +861,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -897,7 +903,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -986,7 +992,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -1028,7 +1034,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -1077,7 +1083,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -1119,7 +1125,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -1208,7 +1214,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -1250,7 +1256,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -1299,7 +1305,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -1341,7 +1347,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -1528,6 +1534,7 @@
                 android:layout_gravity="center_vertical"/>
 
             <EditText
+                android:id="@+id/ettotalamount"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -1563,6 +1570,7 @@
                 android:layout_gravity="center_vertical"/>
 
             <EditText
+                android:id="@+id/etremarks"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
