Company and Reseller Stock Added

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -98,6 +98,7 @@
                         android:orientation="vertical"
                         android:layout_weight="1">
                         <TextView
+                            android:id="@+id/title"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Manoj Sah"
@@ -108,6 +109,7 @@
                             android:fontFamily="@font/sofia_pro_bold_az"
                             android:textSize="22sp"/>
                         <TextView
+                            android:id="@+id/subtitle"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Manoj Kirana Pasal"
@@ -119,6 +121,7 @@
                             android:letterSpacing="0.1"/>
 
                         <TextView
+                            android:id="@+id/address"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Chirauli, Bhokraha - 1"
@@ -764,7 +767,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -806,7 +809,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -855,7 +858,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -897,7 +900,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -986,7 +989,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -1028,7 +1031,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -1077,7 +1080,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -1119,7 +1122,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -1208,7 +1211,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -1250,7 +1253,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -1299,7 +1302,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -1341,7 +1344,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginRight="10dp"
-                                android:hint="0"
+                                android:text="0"
                                 android:textCursorDrawable="@null"
                                 android:inputType="number"
                                 android:background="@null"
@@ -1528,10 +1531,12 @@
                 android:layout_gravity="center_vertical"/>
 
             <EditText
+                android:id="@+id/ettotalamount"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/title_Ratenoofcylinder"
+                android:text="12334"
                 android:inputType="number"
                 android:textColor="@color/white"
                 android:fontFamily="@font/sofia_pro_regular_az"
@@ -1563,10 +1568,11 @@
                 android:layout_gravity="center_vertical"/>
 
             <EditText
+                android:id="@+id/etremarks"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/title_Comments"
+                android:text="@string/title_Comments"
                 android:textColor="@color/white"
                 android:fontFamily="@font/sofia_pro_regular_az"
                 android:textSize="16dp"
