--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -101,7 +101,7 @@
                             android:id="@+id/title"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Manoj Sah"
+                            android:text="Name"
                             android:contentDescription="Name"
                             android:textStyle="bold"
                             android:textColor="@color/white"
@@ -112,7 +112,7 @@
                             android:id="@+id/subtitle"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Manoj Kirana Pasal"
+                            android:text="Registered name"
                             android:contentDescription="Company"
                             android:textStyle="normal"
                             android:textColor="#CCFFFFFF"
@@ -124,7 +124,7 @@
                             android:id="@+id/address"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Chirauli, Bhokraha - 1"
+                            android:text="Address"
                             android:contentDescription="Address"
                             android:textStyle="normal"
                             android:textColor="#CCFFFFFF"
@@ -205,7 +205,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
-                                android:text="28640"
+                                android:text=""
                                 android:fontFamily="@font/sofia_pro_regular_az"
                                 android:textStyle="normal"
                                 android:textSize="14dp"
@@ -257,7 +257,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
-                                android:text="20"
+                                android:text=""
                                 android:fontFamily="@font/sofia_pro_regular_az"
                                 android:textStyle="normal"
                                 android:textSize="14dp"
@@ -308,7 +308,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
-                                android:text="20"
+                                android:text=""
                                 android:fontFamily="@font/sofia_pro_regular_az"
                                 android:textStyle="normal"
                                 android:textSize="14dp"
@@ -367,7 +367,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
-                                android:text="1343"
+                                android:text=""
                                 android:fontFamily="@font/sofia_pro_regular_az"
                                 android:textStyle="normal"
                                 android:textSize="14dp"
@@ -419,7 +419,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
-                                android:text="3458"
+                                android:text=""
                                 android:fontFamily="@font/sofia_pro_regular_az"
                                 android:textStyle="normal"
                                 android:textSize="14dp"
@@ -471,7 +471,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
-                                android:text="50"
+                                android:text=""
                                 android:fontFamily="@font/sofia_pro_regular_az"
                                 android:textStyle="normal"
                                 android:textSize="14dp"
