--- a/app/src/main/res/layout/activity_receipt.xml
+++ b/app/src/main/res/layout/activity_receipt.xml
@@ -94,6 +94,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Manoj Shah"
+                        android:contentDescription="9801149729"
                         android:textSize="20dp"
                         android:textStyle="bold" />
 
