--- a/app/src/main/res/layout/viewresellerprofile.xml
+++ b/app/src/main/res/layout/viewresellerprofile.xml
@@ -136,13 +136,13 @@
                         android:id="@+id/TV_Price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center"
                         android:layout_marginLeft="5dp"
-                        android:text="28640"
                         android:fontFamily="@font/sofia_pro_regular_az"
-                        android:textStyle="normal"
-                        android:textSize="14dp"
+                        android:text="28640"
                         android:textColor="@color/white"
-                        android:layout_gravity="center"/>
+                        android:textSize="14dp"
+                        android:textStyle="normal" />
 
                 </FrameLayout>
 
