--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -15,6 +15,7 @@
 
         <ImageView
             android:layout_width="21dp"
+            android:id="@+id/Plus"
             android:layout_height="21dp"
             android:layout_marginLeft="15dp"
             android:layout_gravity="left|center_vertical"
@@ -150,7 +151,7 @@
     <!--SCHEDULE-->
     <ScrollView
         android:id="@+id/svScheduleView"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
